# example-salvo-openapi

./: Cargo.toml
src/: main.rs  middleware.rs
