[package]
name = "example-salvo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
jsonwebtoken = "9.3.0"

salvo = { version = "0.76.1", features = ["anyhow","jwt-auth", "oapi", "affix-state", "size-limiter"] }

serde = { version="1.0.217", features=["derive"]}
tokio = { version = "1.43.0", features = ["full"] }


time = "0.3.37"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = "5.3.1"
utoipa-swagger-ui = "9.0.0"
serde_json = "1.0.138"
once_cell = "1.20.2"
